--- a/app/components/CityList/style.less
+++ b/app/components/CityList/style.less
@@ -1,5 +1,5 @@
 .city-list{
-    margin: 38px 60px;
+    margin: 38px 20px;
     padding: 0;
     .city-list-title{
         color: black;
@@ -16,6 +16,7 @@
             font-size: 16px;
             margin-right: 10px;
             margin-bottom: 10px;
+            padding: 10px 0;
 
         }
     }
