fullfill the home page

--- a/app/components/SpaceBar/style.less
+++ b/app/components/SpaceBar/style.less
@@ -1,3 +1,9 @@
-.space-bar{
-    border-top:10px solid #f1f1f1;
+.space-bar-without-title{
+    background: #f1f1f1;
+    padding: 13.5px;   
 }
+.space-bar-with-title{
+    background: #f1f1f1;
+    padding: 13.5px;
+}
+
