--- a/app/components/ListItem/style.less
+++ b/app/components/ListItem/style.less
@@ -1,14 +1,44 @@
 .item-wrapper{
     margin: 22px;
+    padding-bottom: 18px;
     border-bottom: 1px solid #f3f3f3;
     .item-img{
         width: 116px;
         height: 90px;
     }
     .item-content{
-        font-size: 16px;
         display: inline-block;
         width: 220px;
         margin-left: 12px;
+        vertical-align: top;
+        position: relative;
+        .item-title{
+            font-size: 20px;
+            font-weight: normal;
+        }
+        .item-subTitle{
+            font-size: 14px;
+            color: #c1c1c1;
+            padding: 10px 0;
+        }
+        .item-price{
+            color: red;
+            font-size: 22px;
+        }
+        .item-distance{
+            position: absolute;
+            top: 10px;
+            right: 10px;
+
+            font-size: 12px;
+            color: #c1c1c1;
+        }
+        .item-number{
+            position: absolute;
+            font-size: 12px;
+            right: 10px;
+            bottom: 0;
+            color: #c1c1c1;
+        }
     }
 }
