--- a/app/containers/Detail/subPage/style.less
+++ b/app/containers/Detail/subPage/style.less
@@ -1,4 +1,21 @@
-h3{
-    font-family: "\5FAE\8F6F\96C5\9ED1", "Times New Roman", Georgia, Serif;
-    font-size: 18px;
+.content-wrapper{
+    margin: 20px;
+    .text-info{
+        vertical-align: top;
+        display:inline-block;
+        margin-left: 10px;
+        h3{
+            font-family: "\5FAE\8F6F\96C5\9ED1", "Times New Roman", Georgia, Serif;
+            font-size: 18px;
+        }
+        .star{
+            display: inline-block;
+            width: 40%;
+        }
+        .price{
+            display: inline-block;
+            position: relative;
+            left: 120px;
+        }
+    }
 }
