--- a/app/containers/Detail/subPage/style.less
+++ b/app/containers/Detail/subPage/style.less
@@ -17,5 +17,23 @@
             position: relative;
             left: 120px;
         }
+        .sub-title{
+            margin-top: 10px;
+        }
+    }
+}
+
+
+.info-style{
+    margin: 10px;
+    margin-left: 20px;
+    .dealer-title{
+        border-bottom: 1px solid #F2F2F2;
+        padding-bottom: 10px;
+        color: #6B6665;
+    }
+    .concise-info{
+        padding-top: 10px;
+        color: #828282;
     }
 }
